src/styles/main.scss
@import 'mixins';

/* Break Points (Width) */
$mobile-width: 375px;
$tablet-width: 800px;
$laptop-width: 1366px;
$desktop-width: 1920px;

/* Colors */
$color-500: #d4a373;
$color-400: #ccd5ae;
$color-300: #fefae0;
$color-200: #e9edc9;
$color-100: #faedcd;
$color-link-hover: #0366d640;

/* Transition */
$transition-fast: 0.2s ease-in-out;
$transition-slow: 0.5s ease-in-out;
/* Box Shadow */
$box-shadow1: rgba(0, 0, 0, 0.2) 0px 2px 4px,
  rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -2px 0px inset;
$box-shadow2: $color-link-hover 0px 0px 12px 3px;

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: inherit;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
}

h1 {
  color: red;
}

/* Desktop/Mobile Nav Elements */
input[name='searchbar'] {
  /* Overrides */
  border: none;
  outline: none;
  caret-color: transparent;
  /* Carry on... */
  width: 100%;
  max-width: 500px;
  float: right;
  border-radius: 15px;
  padding: 8px 12px;
  transition: $transition-fast;
  &:focus {
    transform: translateY(-2px);
    box-shadow: $box-shadow1;
  }
  &:hover:not(:focus) {
    box-shadow: $box-shadow2;
  }
}

/* Mobile Menu/Nav */
.mobile-menu {
  z-index: 99;
  background: rgba($color-300, 0.95);
  position: fixed;
  top: 56px;
  left: 0;
  bottom: 0;
  height: calc(100vh - 50px);
  max-width: 20vw;
  min-width: 150px;
  box-shadow: $box-shadow1;
  a {
    text-decoration: none;
    color: #000;
    height: 30px;
    padding: 0 0.5em;
    display: flex;
    align-items: center;
    transition: $transition-fast;
    &:hover {
      z-index: 99;
      transform: translateY(-5px);
      background: $color-400;
    }
  }
  div {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: space-around;
  }
}
.menu-btn {
  display: flex;
  align-items: center;
  background: #1f1f1f20;
  padding: 2px;
  border-radius: 5px;
  transition: $transition-fast;
  &:hover {
    cursor: pointer;
    background: #00000050;
  }
  &:active {
    transition: none;
    background: #ffffff50;
  }
}
.mobile-links {
  height: 100vh;
}

/* Logo Element */
.logo {
  position: absolute;
  left: calc(50% - 20px);
  padding: 5px;
  color: #000;
  text-decoration: none;
}

/* Desktop Menu/Nav */
.nav-link {
  text-decoration: none;
  color: 'white';
  font-size: 1em;
  margin-right: 10px;
  &:hover {
    cursor: pointer;
  }
}
.menu-links {
  display: flex;
}
.menu-link-item {
  list-style: none;
  margin-right: 20px;
}

/* Signup/Signin Form */
.form {
  margin-left: 100px;
}
/* Media Queries */
// @media screen and (min-width: $tablet-width) {
//   .mobile-nav {
//     display: none !important;
//   }
// }

